trunk/PrettyPrinter/src/SPLADParser.java
// Generated from SPLAD.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPLADParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__42=1, T__41=2, T__40=3, T__39=4, T__38=5, T__37=6, T__36=7, T__35=8, 
		T__34=9, T__33=10, T__32=11, T__31=12, T__30=13, T__29=14, T__28=15, T__27=16, 
		T__26=17, T__25=18, T__24=19, T__23=20, T__22=21, T__21=22, T__20=23, 
		T__19=24, T__18=25, T__17=26, T__16=27, T__15=28, T__14=29, T__13=30, 
		T__12=31, T__11=32, T__10=33, T__9=34, T__8=35, T__7=36, T__6=37, T__5=38, 
		T__4=39, T__3=40, T__2=41, T__1=42, T__0=43, PRIMITIVETYPE=44, ARRAYCALL=45, 
		STRINGTOKEN=46, LETTER=47, DIGIT=48, NOTZERODIGIT=49, COMMENT=50, WS=51, 
		OTHER=52;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "']'", "'using'", "'default'", "','", "'*'", "'['", 
		"'-'", "'while'", "'('", "':'", "'if'", "'<'", "'false'", "'!='", "'<='", 
		"'to'", "'break'", "'OR'", "'nothing'", "'else'", "'HIGH'", "'true'", 
		"'case'", "'AND'", "'.'", "')'", "'function'", "'step'", "'+'", "'='", 
		"'return'", "';'", "'>'", "'call'", "'begin'", "'switch'", "'/'", "'>='", 
		"'end'", "'!'", "'<--'", "'LOW'", "PRIMITIVETYPE", "ARRAYCALL", "STRINGTOKEN", 
		"LETTER", "DIGIT", "NOTZERODIGIT", "COMMENT", "WS", "' '"
	};
	public static final int
		RULE_program = 0, RULE_roots = 1, RULE_root = 2, RULE_dcl = 3, RULE_type = 4, 
		RULE_arraytype = 5, RULE_id = 6, RULE_dclend = 7, RULE_assign = 8, RULE_expr = 9, 
		RULE_term = 10, RULE_comp = 11, RULE_factor = 12, RULE_callid = 13, RULE_arrayiden = 14, 
		RULE_numeric = 15, RULE_plusminus = 16, RULE_numericend = 17, RULE_string = 18, 
		RULE_functioncall = 19, RULE_callexpr = 20, RULE_subcallexpr = 21, RULE_subcallexprend = 22, 
		RULE_cast = 23, RULE_compend = 24, RULE_comparisonoperator = 25, RULE_termend = 26, 
		RULE_exprend = 27, RULE_function = 28, RULE_functionmidt = 29, RULE_functionend = 30, 
		RULE_params = 31, RULE_subparams = 32, RULE_subparamsend = 33, RULE_stmts = 34, 
		RULE_stmt = 35, RULE_nontermif = 36, RULE_endif = 37, RULE_nontermelse = 38, 
		RULE_nontermwhile = 39, RULE_from = 40, RULE_nontermswitch = 41, RULE_cases = 42, 
		RULE_endcase = 43, RULE_breakend = 44;
	public static final String[] ruleNames = {
		"program", "roots", "root", "dcl", "type", "arraytype", "id", "dclend", 
		"assign", "expr", "term", "comp", "factor", "callid", "arrayiden", "numeric", 
		"plusminus", "numericend", "string", "functioncall", "callexpr", "subcallexpr", 
		"subcallexprend", "cast", "compend", "comparisonoperator", "termend", 
		"exprend", "function", "functionmidt", "functionend", "params", "subparams", 
		"subparamsend", "stmts", "stmt", "nontermif", "endif", "nontermelse", 
		"nontermwhile", "from", "nontermswitch", "cases", "endcase", "breakend"
	};

	@Override
	public String getGrammarFileName() { return "SPLAD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPLADParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); roots();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootsContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public RootsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roots; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoots(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootsContext roots() throws RecognitionException {
		RootsContext _localctx = new RootsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_roots);
		try {
			setState(96);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 28:
			case PRIMITIVETYPE:
			case LETTER:
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); root();
				setState(94); roots();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(SPLADParser.COMMENT, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_root);
		try {
			setState(107);
			switch (_input.LA(1)) {
			case PRIMITIVETYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); dcl();
				setState(99); match(33);
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); callid();
				setState(102); assign();
				setState(103); match(33);
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 3);
				{
				setState(105); function();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(106); match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DclendContext dclend() {
			return getRuleContext(DclendContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); type();
			setState(110); id();
			setState(111); dclend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ArraytypeContext arraytype() {
			return getRuleContext(ArraytypeContext.class,0);
		}
		public TerminalNode PRIMITIVETYPE() { return getToken(SPLADParser.PRIMITIVETYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(PRIMITIVETYPE);
			setState(114); arraytype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraytypeContext extends ParserRuleContext {
		public ArraytypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraytype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArraytype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraytypeContext arraytype() throws RecognitionException {
		ArraytypeContext _localctx = new ArraytypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arraytype);
		try {
			setState(119);
			switch (_input.LA(1)) {
			case 7:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); match(7);
				setState(117); match(2);
				}
				break;
			case 3:
			case 10:
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(SPLADParser.LETTER, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); match(LETTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclendContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DclendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dclend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDclend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclendContext dclend() throws RecognitionException {
		DclendContext _localctx = new DclendContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dclend);
		try {
			setState(125);
			switch (_input.LA(1)) {
			case 33:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 42:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(42);
			setState(128); expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprendContext exprend() {
			return getRuleContext(ExprendContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); term();
			setState(131); exprend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TermendContext termend() {
			return getRuleContext(TermendContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); comp();
			setState(134); termend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public CompendContext compend() {
			return getRuleContext(CompendContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); factor();
			setState(137); compend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_factor);
		try {
			setState(166);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139); match(10);
				setState(140); expr();
				setState(141); match(27);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); match(41);
				setState(144); match(10);
				setState(145); expr();
				setState(146); match(27);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148); callid();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149); callid();
				setState(150); match(10);
				setState(151); expr();
				setState(152); match(27);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(154); callid();
				setState(155); match(10);
				setState(156); match(27);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(158); numeric();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(159); string();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(160); functioncall();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(161); cast();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(162); match(43);
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(163); match(22);
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(164); match(23);
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(165); match(14);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallidContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArrayidenContext arrayiden() {
			return getRuleContext(ArrayidenContext.class,0);
		}
		public CallidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callid; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitCallid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallidContext callid() throws RecognitionException {
		CallidContext _localctx = new CallidContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_callid);
		try {
			setState(172);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168); id();
				setState(169); arrayiden();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(171); id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayidenContext extends ParserRuleContext {
		public TerminalNode ARRAYCALL() { return getToken(SPLADParser.ARRAYCALL, 0); }
		public ArrayidenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayiden; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArrayiden(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayidenContext arrayiden() throws RecognitionException {
		ArrayidenContext _localctx = new ArrayidenContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_arrayiden);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(ARRAYCALL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericContext extends ParserRuleContext {
		public PlusminusContext plusminus() {
			return getRuleContext(PlusminusContext.class,0);
		}
		public TerminalNode DIGIT() { return getToken(SPLADParser.DIGIT, 0); }
		public NumericendContext numericend() {
			return getRuleContext(NumericendContext.class,0);
		}
		public NumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitNumeric(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericContext numeric() throws RecognitionException {
		NumericContext _localctx = new NumericContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_numeric);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); plusminus();
			setState(177); match(DIGIT);
			setState(178); numericend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusminusContext extends ParserRuleContext {
		public PlusminusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusminus; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitPlusminus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusminusContext plusminus() throws RecognitionException {
		PlusminusContext _localctx = new PlusminusContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_plusminus);
		try {
			setState(183);
			switch (_input.LA(1)) {
			case DIGIT:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 2);
				{
				setState(181); match(8);
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 3);
				{
				setState(182); match(30);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericendContext extends ParserRuleContext {
		public TerminalNode DIGIT() { return getToken(SPLADParser.DIGIT, 0); }
		public NumericendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitNumericend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericendContext numericend() throws RecognitionException {
		NumericendContext _localctx = new NumericendContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_numericend);
		try {
			setState(188);
			switch (_input.LA(1)) {
			case 5:
			case 6:
			case 8:
			case 11:
			case 13:
			case 15:
			case 16:
			case 17:
			case 19:
			case 25:
			case 27:
			case 29:
			case 30:
			case 31:
			case 33:
			case 34:
			case 36:
			case 38:
			case 39:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 2);
				{
				setState(186); match(26);
				setState(187); match(DIGIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRINGTOKEN() { return getToken(SPLADParser.STRINGTOKEN, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190); match(STRINGTOKEN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctioncallContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public CallexprContext callexpr() {
			return getRuleContext(CallexprContext.class,0);
		}
		public FunctioncallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functioncall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitFunctioncall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctioncallContext functioncall() throws RecognitionException {
		FunctioncallContext _localctx = new FunctioncallContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_functioncall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192); match(35);
			setState(193); id();
			setState(194); match(10);
			setState(195); callexpr();
			setState(196); match(27);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallexprContext extends ParserRuleContext {
		public SubcallexprContext subcallexpr() {
